status with colored box minor fixes

--- a/src/LanBackup.WebApp/appsettings.json
+++ b/src/LanBackup.WebApp/appsettings.json
@@ -4,6 +4,9 @@
     "InstrumentationEnabled": false,
     "InstrumentationKey": "YOUR_OWN_KEY"
   },
+  "AppSettings": {
+    "InstrumentationEnabled": false
+  },
   "ConnectionStrings": {
     "DefaultConnection": "Server=(localdb)\\mssqllocaldb;Database=aspnet-LanBackup.WebApp-d5f6c3b5-64d7-4d41-8000-1e69f75536f7;Trusted_Connection=True;MultipleActiveResultSets=true",
     "BackupsConnectionString": "Server=(localdb)\\mssqllocaldb;Database=BackupsLAN;Trusted_Connection=True;"
